added color to landing txt

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="row">
           <div class="col-5 mt-4 landtxt">
-            <h1>DST</h1>
-            <h2>KENYA</h2>
+            <h1>NEED FOR </h1>
+            <h2>SPEED</h2>
           </div>
         </div>
       </div>
