--- a/index.html
+++ b/index.html
@@ -29,5 +29,33 @@
         </div>
       </div>
     </div>
+
+    <!-- About section -->
+
+
+    <!-- Registration -->
+    <div class="registration">
+        <div class="container justify-content-between">
+            <div class="row">
+                <div class="col-7">
+                    <div class="card">
+                        <div class="card-body dark">
+                            <div class="form-group formstyle">
+                                <form>
+                                    <input type="text" name="" id="" placeholder="Names" class="form-control  m-4">
+                                    <input type="text" placeholder="Street Names" class="form-control  m-4">
+                                    <input type="number" placeholder="Ages" class="form-control  m-4">
+                                    <input type="text" placeholder="Vehicles" class="form-control  m-4">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5">
+                    <img src="images/globe.gif" alt="globe" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
