--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="row">
           <div class="col-5 mt-4 landtxt">
-            <h1>NEED FOR </h1>
+            <h1>NEED FOR</h1>
             <h2>SPEED</h2>
           </div>
         </div>
@@ -32,30 +32,48 @@
 
     <!-- About section -->
 
-
     <!-- Registration -->
     <div class="registration">
-        <div class="container justify-content-between">
-            <div class="row">
-                <div class="col-7">
-                    <div class="card">
-                        <div class="card-body dark">
-                            <div class="form-group formstyle">
-                                <form>
-                                    <input type="text" name="" id="" placeholder="Names" class="form-control  m-4">
-                                    <input type="text" placeholder="Street Names" class="form-control  m-4">
-                                    <input type="number" placeholder="Ages" class="form-control  m-4">
-                                    <input type="text" placeholder="Vehicles" class="form-control  m-4">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+      <div class="container justify-content-between">
+        <div class="row">
+          <div class="col-7">
+            <div class="card">
+              <div class="card-body dark">
+                <div class="form-group formstyle">
+                  <form>
+                    <input
+                      type="text"
+                      name=""
+                      id=""
+                      placeholder="Names"
+                      class="form-control  m-4"
+                    />
+                    <input
+                      type="text"
+                      placeholder="Street Names"
+                      class="form-control  m-4"
+                    />
+                    <input
+                      type="number"
+                      placeholder="Ages"
+                      class="form-control  m-4"
+                    />
+                    <input
+                      type="text"
+                      placeholder="Vehicles"
+                      class="form-control  m-4"
+                    />
+                    <button type="button">submit</button>
+                  </form>
                 </div>
-                <div class="col-5">
-                    <img src="images/globe.gif" alt="globe" class="img-fluid">
-                </div>
+              </div>
             </div>
+          </div>
+          <div class="col-5">
+            <img src="images/globe.gif" alt="globe" class="img-fluid" />
+          </div>
         </div>
+      </div>
     </div>
   </body>
 </html>
