--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                     <div class="card">
                         <div class="card-body dark">
                             <div class="form-group formstyle">
+                              <h1>games co</h1>
+                            </div>
                                 <form>
-                                    <input type="text" name="Javascript" id="" placeholder="Names" class="form-control  m-4">
+                                    <input type="text" name="" id="" placeholder="Names" class="form-control  m-4">
                                     <input type="text" placeholder="Street Names" class="form-control  m-4">
                                     <input type="number" placeholder="Ages" class="form-control  m-4">
                                     <input type="text" placeholder="Vehicles" class="form-control  m-4">
