--- a/index.html
+++ b/index.html
@@ -34,43 +34,44 @@
 
     <!-- Registration -->
     <div class="registration">
-      <div class="container justify-content-between">
-        <div class="row">
-          <div class="col-7">
-            <div class="card">
-              <div class="card-body dark">
-                <div class="form-group formstyle">
+      <div class="container-fluid">
+          <h1 class="heading"> Registration</h1>
+        <div class="row d-flex justify-content-between">
+          <div class="col-5">
+            <div class="cardmt">
+              <div class=" dark">
+                <div class=" formstyle">
                   <form>
                     <input
                       type="text"
                       name=""
                       id=""
-                      placeholder="Names"
-                      class="form-control  m-4"
-                    />
+                      placeholder="Name"
+                      class="  m-4"
+                    /> <br>
                     <input
                       type="text"
-                      placeholder="Street Names"
-                      class="form-control  m-4"
-                    />
+                      placeholder="Street Name"
+                      class="  m-4"
+                    /><br>
                     <input
                       type="number"
-                      placeholder="Ages"
-                      class="form-control  m-4"
-                    />
+                      placeholder="Age"
+                      class="  m-4"
+                    /><br>
                     <input
                       type="text"
-                      placeholder="Vehicles"
-                      class="form-control  m-4"
-                    />
-                    <button type="button">submit</button>
+                      placeholder="Vehicle"
+                      class="  m-4"
+                    /> <br>
+                    <button type="button" class="btn">Race</button>
                   </form>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-5">
-            <img src="images/globe.gif" alt="globe" class="img-fluid" />
+            <img src="images/register.jpg" alt="globe" class="img-fluid" />
           </div>
         </div>
       </div>
