added a circuitrace card

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
     <!-- Registration -->
+    
     <div class="registration">
         <div class="container justify-content-between">
             <div class="row">
@@ -57,7 +58,17 @@
                     <img src="images/globe.gif" alt="globe" class="img-fluid">
                 </div>
             </div>
+          </div>
+
+        <div class="card">
+          <img src="images/climuru.png" alt="Avatar" style="width:20%">
+          <div class="container">
+            <h4><b>Circuit race</b></h4>
+            <p>10km - limuru</p>
+            <p>Time: 0300hrs</p>
+          </div>
         </div>
+
     </div>
   </body>
 </html>
