--- a/race.html
+++ b/race.html
@@ -15,15 +15,18 @@
   </head>
   <body>
     <div class="cointainer">
-        
-      <div class="drag">
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="images/icon.png"
-            alt="Card image cap"
-          />
-          <div class="card-body">Some more card content</div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="drag">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="images/icon.png"
+                alt="Card image cap"
+              />
+              <div class="card-body">drag racing</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
