add another card body for sprint racing

--- a/race.html
+++ b/race.html
@@ -28,6 +28,17 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+            <div class="sprint">
+                    <div class="card">
+                            <img
+                              class="card-img-top"
+                              src="images/sprint2.png"
+                              alt="Card image cap"
+                            />
+                            <div class="card-body">sprint racing</div>
+            </div>
+        </div>
       </div>
     </div>
   </body>
