--- a/race.html
+++ b/race.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="cointainer">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="drag">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="images/icon.png"
-                alt="Card image cap"
-              />
-              <div class="card-body">drag racing</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-            <div class="sprint">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="drag">
                     <div class="card">
-                            <img
-                              class="card-img-top"
-                              src="images/sprint3.png"
-                              alt="Card image cap"
-                            />
-                            <div class="card-body">sprint racing</div>
+                        <img class="card-img-top" src="images/icon.png" alt="Card image cap" />
+                        <div class="card-body">drag racing</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="sprint">
+                    <div class="card">
+                        <img class="card-img-top" src="images/sprint3.png" alt="Card image cap" />
+                        <div class="card-body">sprint racing</div>
+                    </div>
+                </div>
             </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
