--- a/race.html
+++ b/race.html
@@ -30,6 +30,14 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="circuit">
+                    <div class="card">
+                        <img class="card-img-top" src="images/circuit1.png" alt="Card image cap" />
+                        <div class="card-body">circuit racing</div>
+                    </div> 
+                </div>
+            </div>
         </div>
     </div>
 </body>
