add the three type of racing for  sprint racing

--- a/race.html
+++ b/race.html
@@ -35,11 +35,46 @@
                     <div class="card">
                         <img class="card-img-top" src="images/circuit1.png" alt="Card image cap" />
                         <div class="card-body">circuit racing</div>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-md-4">
+                <p> name:aderal <br>
+                    km; <br>
+                    location: <br>
+                    time:
+                </p>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
+
+            </div>
+            <div class="col-md-4">
+                <p> name:lasertan <br>
+                    km; <br>
+                    location: <br>
+                    time:
+                </p>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
+            </div>
+            <div class="col-md-4">
+                <p> name:warfarin <br>
+                    km; <br>
+                    location: <br>
+                    time:
+                </p>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
+            </div>
+        </div>
 </body>
 
 </html>
