--- a/race.html
+++ b/race.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <div class="cointainer">
+    
+    <div class="cointainer"><!-- the card body images arent sime size change size of image-->
         <div class="row">
             <div class="col-md-4">
                 <div class="drag">
@@ -39,6 +40,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- sprint racing  without pics from kraft dont know whether to include the card body effect or just this skeleton format-->
         <div class="row">
             <div class="col-md-4">
                 <p> name:aderal <br>
@@ -46,6 +49,7 @@
                     location: <br>
                     time:
                 </p>
+                <!-- buttons arent working got from bootstrap cheat-->
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
                     register
