change images sizes

--- a/race.html
+++ b/race.html
@@ -18,7 +18,7 @@
             <div class="col-md-4">
                 <div class="drag">
                     <div class="card">
-                        <img class="card-img-top" src="images/icon.png" alt="Card image cap" />
+                        <img class="card-img-top" src="images/icon.png" alt="Card image cap" width="500" height="400" />
                         <div class="card-body">drag racing</div>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
             <div class="col-md-4">
                 <div class="sprint">
                     <div class="card">
-                        <img class="card-img-top" src="images/sprint3.png" alt="Card image cap" />
+                        <img class="card-img-top" src="images/sprint3.png" alt="Card image cap" width="500" height="400"/>
                         <div class="card-body">sprint racing</div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
             <div class="col-md-4">
                 <div class="circuit">
                     <div class="card">
-                        <img class="card-img-top" src="images/circuit1.png" alt="Card image cap" />
+                        <img class="card-img-top" src="images/circuit1.png" alt="Card image cap" width="500" height="400"/>
                         <div class="card-body">circuit racing</div>
                     </div>
                 </div>
