--- a/index.html
+++ b/index.html
@@ -63,9 +63,17 @@
         <div class="card">
           <img src="images/climuru.png" alt="Avatar" style="width:20%">
           <div class="container">
-            <h4><b>Circuit race</b></h4>
+            <h4><b>Circuit Race</b></h4>
             <p>10km - limuru</p>
             <p>Time: 0300hrs</p>
+          </div>
+        </div>
+        <div class="card" style="width:400px">
+          <img class="card-img-top" src="images/csyokimau.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text.</p>
+            <a href="#" class="btn btn-primary">See Profile</a>
           </div>
         </div>
 
