added name icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DST-KENYA</title>
+    <script
+      src="https://kit.fontawesome.com/786de20e9a.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display|Shadows+Into+Light&display=swap"
       rel="stylesheet"
@@ -35,7 +39,7 @@
     <!-- Registration -->
     <div class="registration">
       <div class="container-fluid">
-          <h1 class="heading"> Registration</h1>
+        <h1 class="heading">Registration</h1>
         <div class="row d-flex justify-content-between">
           <div class="col-5">
             <div class="cardmt">
@@ -48,22 +52,22 @@
                       id=""
                       placeholder="Name"
                       class="  m-4"
-                    /> <br>
+                    />
+                    <i class="fas fa-user-astronaut fa-2x orange"></i>
+
+                    <br />
                     <input
                       type="text"
                       placeholder="Street Name"
                       class="  m-4"
-                    /><br>
+                    /><br />
                     <input
                       type="number"
                       placeholder="Age"
                       class="  m-4"
-                    /><br>
-                    <input
-                      type="text"
-                      placeholder="Vehicle"
-                      class="  m-4"
-                    /> <br>
+                    /><br />
+                    <input type="text" placeholder="Vehicle" class="  m-4" />
+                    <br />
                     <button type="button" class="btn">Race</button>
                   </form>
                 </div>
