--- a/race.html
+++ b/race.html
@@ -45,6 +45,7 @@
         <!-- sprint racing  without pics from kraft dont know whether to include the card body effect or just this skeleton format-->
         <div class="row">
             <div class="col-md-4">
+                <img src="images/ssyokimau.png">
                 <p> name:aderal <br>
                     km; <br>
                     location: <br>
@@ -58,6 +59,7 @@
 
             </div>
             <div class="col-md-4">
+                <img src="images/sroysambu.png">
                 <p> name:lasertan <br>
                     km; <br>
                     location: <br>
@@ -69,6 +71,7 @@
                 </button>
             </div>
             <div class="col-md-4">
+                <img src="images/slimuru.png">
                 <p> name:warfarin <br>
                     km; <br>
                     location: <br>
