--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
       <div class="container">
         <div class="row">
           <div class="col-5 mt-4 landtxt">
-<<<<<<< HEAD
-
-=======
-            <h1>NEED FOR</h1>
-            <h2>SPEED</h2>
->>>>>>> 3ac84062f416d4cd22ccb50714cae3b8d6a1917d
           </div>
         </div>
       </div>
     </div>
 
     <!-- About section -->
+    <div>
+      DST-KENYA is a website of competitive sporting events for adrenaline junkies, 
+      which primarily involve the use of motorised Vehicles, for racing in three categories: 
+      <ul>
+        <li>CIRCUIT RACE</li>
+        <li>SPRINT RACE/li>
+        <li>DRAG RACE</li>
+      </ul>
+    </div>
 
     <!-- Registration -->
     <div class="registration">
