add sprint drag circuit racing pics

--- a/race.html
+++ b/race.html
@@ -19,7 +19,7 @@
             <div class="col-md-4">
                 <div class="drag">
                     <div class="card">
-                        <img class="card-img-top" src="images/icon.png" alt="Card image cap" width="500" height="400" />
+                        <img class="card-img-top" src="images/drag1.jpeg" alt="Card image cap" width="500" height="400" />
                         <div class="card-body">drag racing</div>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
             <div class="col-md-4">
                 <div class="sprint">
                     <div class="card">
-                        <img class="card-img-top" src="images/sprint3.png" alt="Card image cap" width="500" height="400"/>
+                        <img class="card-img-top" src="images/sprint4.jpeg" alt="Card image cap" width="500" height="400"/>
                         <div class="card-body">sprint racing</div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
             <div class="col-md-4">
                 <div class="circuit">
                     <div class="card">
-                        <img class="card-img-top" src="images/circuit1.png" alt="Card image cap" width="500" height="400"/>
+                        <img class="card-img-top" src="images/circuit2.jpeg" alt="Card image cap" width="500" height="400"/>
                         <div class="card-body">circuit racing</div>
                     </div>
                 </div>
