lists changed to buttons ;added p tags in about section

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     </div>
 
     <!-- About section -->
-    <div>
-      DST-KENYA is a website of competitive sporting events for adrenaline
-      junkies, which primarily involve the use of motorised Vehicles, for racing
-      in three categories:
-      <ul>
-        <li>CIRCUIT RACE</li>
-        <li>SPRINT RACE/li></li>
-        <li>DRAG RACE</li>
-      </ul>
+    <div class="about" id="about">
+      <p>
+        DST-KENYA is a website of competitive sporting events for adrenalinejunkies, <br>
+         which primarily involves the use of motorised <br>
+        Vehicles(enclosed-4-wheel), for racing in three categories: <br>
+        <button type="button">CIRCUIT RACE</button><br />
+        <button type="button">SPRINT RACE</button><br />
+        <button type="button">DRAG RACE</button><br />
+      </p>
     </div>
 
     <!-- Registration -->
