added new cards in to the index

--- a/race.html
+++ b/race.html
@@ -48,7 +48,7 @@
                 <div class="card">
                 <img src="images/ssyokimau.png" width="400" height="200">
                 <p> name:aderal <br>
-                    km; <br>
+                    10km; <br>
                     location: <br>
                     time:
                 </p>
@@ -64,7 +64,7 @@
                 <div class="card">
                 <img src="images/sroysambu.png" width="400" height="200">
                 <p> name:lasertan <br>
-                    km; <br>
+                    10km; <br>
                     location: <br>
                     time:
                 </p>
@@ -78,7 +78,7 @@
                 <div class="card">
                 <img src="images/slimuru.png" width="400" height="200">
                 <p> name:warfarin <br>
-                    km; <br>
+                    10km; <br>
                     location: <br>
                     time:
                 </p>
@@ -89,6 +89,52 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/ssyokimau.png" width="400" height="200">
+                    <p> name:Piu mosso <br>
+                        km; <br>
+                        location: <br>
+                        time:
+                    </p>
+                    <!-- buttons arent working got from bootstrap cheat-->
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+    
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/sroysambu.png" width="400" height="200">
+                    <p> name:adagio<br>
+                        km; <br>
+                        location: <br>
+                        time:
+                    </p>
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/slimuru.png" width="400" height="200">
+                    <p> name:grazioso <br>
+                        km; <br>
+                        location: <br>
+                        time:
+                    </p>
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
