added the distance to be covered for the circuit and start location for the race

--- a/race.html
+++ b/race.html
@@ -49,7 +49,7 @@
                 <img src="images/ssyokimau.png" width="400" height="200">
                 <p> name:aderal <br>
                     10km; <br>
-                    location: <br>
+                    location: Malili<br>
                     time:
                 </p>
                 <!-- buttons arent working got from bootstrap cheat-->
@@ -65,7 +65,7 @@
                 <img src="images/sroysambu.png" width="400" height="200">
                 <p> name:lasertan <br>
                     10km; <br>
-                    location: <br>
+                    location: Roysambu <br>
                     time:
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
@@ -79,7 +79,7 @@
                 <img src="images/slimuru.png" width="400" height="200">
                 <p> name:warfarin <br>
                     10km; <br>
-                    location: <br>
+                    location: Imara Dima<br>
                     time:
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
