added numbe of laps

--- a/race.html
+++ b/race.html
@@ -50,7 +50,7 @@
                 <p> name:aderal <br>
                     10km; <br>
                     location: Malili<br>
-                    time:
+                    time:0300hr
                 </p>
                 <!-- buttons arent working got from bootstrap cheat-->
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
@@ -66,7 +66,7 @@
                 <p> name:lasertan <br>
                     10km; <br>
                     location: Roysambu <br>
-                    time:
+                    time:2400hr
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
@@ -80,7 +80,7 @@
                 <p> name:warfarin <br>
                     10km; <br>
                     location: Imara Dima<br>
-                    time:
+                    time: 0100
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
@@ -94,9 +94,10 @@
                     <div class="card">
                     <img src="images/ssyokimau.png" width="400" height="200">
                     <p> name:Piu mosso <br>
-                        km; <br>
+                        15 km; <br>
+                        lapps: 2<br>
                         location: <br>
-                        time:
+                        time: 
                     </p>
                     <!-- buttons arent working got from bootstrap cheat-->
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
@@ -110,7 +111,8 @@
                     <div class="card">
                     <img src="images/sroysambu.png" width="400" height="200">
                     <p> name:adagio<br>
-                        km; <br>
+                        30 km; <br>
+                        lapps: 3<br>
                         location: <br>
                         time:
                     </p>
@@ -124,7 +126,8 @@
                     <div class="card">
                     <img src="images/slimuru.png" width="400" height="200">
                     <p> name:grazioso <br>
-                        km; <br>
+                        40km; <br>
+                        lapps: 3<br>
                         location: <br>
                         time:
                     </p>
