added the location and lapps

--- a/race.html
+++ b/race.html
@@ -80,7 +80,7 @@
                 <p> name:warfarin <br>
                     10km; <br>
                     location: Imara Dima<br>
-                    time: 0100
+                    time: 0100hr
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
@@ -92,12 +92,12 @@
         <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/ssyokimau.png" width="400" height="200">
+                    <img src="images/crace3.jpeg" width="400" height="200">
                     <p> name:Piu mosso <br>
                         15 km; <br>
                         lapps: 2<br>
-                        location: <br>
-                        time: 
+                        location: Junction <br>
+                        time: 0100hr
                     </p>
                     <!-- buttons arent working got from bootstrap cheat-->
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
@@ -109,12 +109,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/sroysambu.png" width="400" height="200">
+                    <img src="images/crace.jpeg" width="400" height="200">
                     <p> name:adagio<br>
                         30 km; <br>
                         lapps: 3<br>
-                        location: <br>
-                        time:
+                        location: Pangani<br>
+                        time: 0100hr
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
@@ -124,12 +124,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/slimuru.png" width="400" height="200">
+                    <img src="images/crace1.jpeg" width="400" height="200">
                     <p> name:grazioso <br>
                         40km; <br>
                         lapps: 3<br>
-                        location: <br>
-                        time:
+                        location: Peponni<br>
+                        time: 2300hr
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
