added laps, time for the laps and the locations

--- a/race.html
+++ b/race.html
@@ -95,7 +95,7 @@
                     <img src="images/crace3.jpeg" width="400" height="200">
                     <p> name:Piu mosso <br>
                         15 km; <br>
-                        lapps: 2<br>
+                        laps: 2<br>
                         location: Junction <br>
                         time: 0100hr
                     </p>
@@ -112,7 +112,7 @@
                     <img src="images/crace.jpeg" width="400" height="200">
                     <p> name:adagio<br>
                         30 km; <br>
-                        lapps: 3<br>
+                        laps: 3<br>
                         location: Pangani<br>
                         time: 0100hr
                     </p>
@@ -127,7 +127,7 @@
                     <img src="images/crace1.jpeg" width="400" height="200">
                     <p> name:grazioso <br>
                         40km; <br>
-                        lapps: 3<br>
+                        laps: 3<br>
                         location: Peponni<br>
                         time: 2300hr
                     </p>
