moved about section inside registration div and changed buttons to lists

--- a/index.html
+++ b/index.html
@@ -31,31 +31,30 @@
       </div>
     </div>
 
-    <!-- About section -->
-    <div class="about" id="about">
-      <p>
-        DST-KENYA is a website of competitive sporting events for adrenalinejunkies, <br>
-         which primarily involves the use of motorised <br>
-        Vehicles(enclosed-4-wheel), for racing in three categories: <br>
-        <button type="button">CIRCUIT RACE</button><br />
-        <button type="button">SPRINT RACE</button><br />
-        <button type="button">DRAG RACE</button><br />
-      </p>
-    </div>
-
     <!-- Registration -->
     <div class="registration">
       <div class="container-fluid">
         <h1 class="heading">Registration</h1>
+        <!-- About section -->
+        <div class="about" id="about">
+          <p>
+            DST-KENYA is a website of competitive sporting events for
+            adrenalinejunkies, <br />
+            which primarily involves the use of motorised <br />
+            Vehicles(enclosed-4-wheel), for racing in three categories: <br />
+            <li>CIRCUIT RACE</li>
+            <li>SPRINT RACE</li>
+            <li>DRAG RACE</li>
+          </p>
+        </div>
         <div class="row d-flex justify-content-between">
           <div class="col-5">
             <div class="cardmt">
               <div class=" dark">
                 <div class=" formstyle">
                   <form>
-                      <i class="fas fa-crown fa-2x orange"></i>
+                    <i class="fas fa-crown fa-2x orange"></i>
                     <input
-                    
                       type="text"
                       name=""
                       id=""
