--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="about" id="about">
           <p>
             DST-KENYA is a website of competitive sporting events for
-            adrenalinejunkies, <br />
+            adrenaline junkies, <br />
             which primarily involves the use of motorised Vehicles <br />
             (enclosed-4-wheel), for racing in three categories: <br />
             <li>CIRCUIT RACE</li>
