edited margin top for registration

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container-fluid">
         <h1 class="heading">Registration</h1>
         <!-- About section -->
-        <div class="about" id="about">
+        <div class="about mt-4" id="about">
           <p>
             DST-KENYA is a website of competitive sporting events for
             adrenalinejunkies, <br />
